--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Ricardo Resume</title>
+	<title>Ricardo Cabrera's Resume</title>
 </head>
 <body>
-  <h1>Filler for Now</h1> 
+	<h1>Ricardo Cabrera's Resume</h1>
 </body>
 </html>
