--- a/index.html
+++ b/index.html
@@ -5,6 +5,40 @@
 	<title>Ricardo Cabrera's Resume</title>
 </head>
 <body>
+	<ul>
+		<li><a href="index.html">Resume</a></li>
+		<li><a href="waterpolorules.html">Water Polo</a></li>
+		<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+	</ul>
 	<h1>Ricardo Cabrera's Resume</h1>
+	<p>rcabrera2@hawk.iit.edu</p>
+	
+	<h2>Education</h2>
+	<ul>
+		<li><p>Lindblom AC 2018-2019</p></li>
+		<li><p>Jones College Prep 2020-2024</p></li>
+	</ul>
+
+	<h2>Skills</h2>
+	<h3>Programming</h3>
+	<ul>
+		<li><p>Java: Distinguished</p></li>
+		<li><p>JavaScript: Distinguished/p></li>
+		<li><p>Html: Profient</p></li>
+		<li><p>Python: Developing</p></li>
+	</ul>
+	<h3>Athletics</h3>
+	<ul>
+		<li><p>Varsity Water Polo</p></li>
+		<li><p>Varsity Swimming</p></li>
+	</ul>
+	
+	<h1>Experience</h1>
+	<h2>After School Matters Teen Ambassador: Marshall Debate</h2>
+	<ul>
+		<li>Helped organize meetings</li>
+		<li>Collaborated with program participates to construct safe environment</li>
+		<li>Provided feedback to ASM leadership</li>
+	</ul>
 </body>
 </html>
