--- a/waterpolorules.html
+++ b/waterpolorules.html
@@ -5,7 +5,23 @@
   <title>Water Polo Rules</title>
 </head>
 <body>
-  <h1>Water Polo Rules</h1>
-
+  <ul>
+		<li><a href="index.html">Resume</a></li>
+		<li><a href="waterpolorules.html">Water Polo</a></li>
+		<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+	</ul>
+  <h1>Water Polo Rules:</h1>
+  <ul>
+    <li><p>6 “Field” Players and 1 Goalie start the game.  Teams consist of up to 15 players.</p></li>
+    <li><p>Field players must pass, catch, and shoot with only 1 hand.  Goalies may use 2 hands.</p></li>
+    <li><p>Taking the ball under water when guarded is a turnover.</p></li>
+    <li><p>The official playing field is at least 25 yards long, 20 yards wide, and 7 feet deep.</p></li>
+    <li><p>Players may not touch the bottom or hang on the wall.</p></li>
+    <li><p>Games consist of 4 quarters and typically last 45 minutes to 1 hour.</p></li>
+    <li><p>There is a 30 second shot clock per possession.</p></li>
+    <li><p>Minor fouls occur frequently and result in a free pass.  There is no limit to minor fouls.</p></li>
+    <li><p>After 3 major fouls (ejections), a player may not return to the game.</p></li>
+</ul>
+<iframe  width="420" height="315" src="https://youtu.be/FMjl6rwJSLg"></iframe>
 </body>
 </html>
