--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<h2>Programming</h2>
 	<ul>
 		<li><p>Java: Distinguished</p></li>
-		<li><p>JavaScript: Distinguished/p></li>
+		<li><p>JavaScript: Distinguished</p></li>
 		<li><p>Html: Profient</p></li>
 		<li><p>Python: Developing</p></li>
 	</ul>
