--- a/waterpolorules.html
+++ b/waterpolorules.html
@@ -22,6 +22,6 @@
     <li><p>Minor fouls occur frequently and result in a free pass.  There is no limit to minor fouls.</p></li>
     <li><p>After 3 major fouls (ejections), a player may not return to the game.</p></li>
 </ul>
-<iframe  width="420" height="315" src="https://youtu.be/FMjl6rwJSLg"></iframe>
+<iframe  width="420" height="315" src="https://www.youtube.com/watch?v=FMjl6rwJSLg&feature=youtu.be&ab_channel=NinhLy"></iframe>
 </body>
 </html>
