--- a/scholasticbowl.html
+++ b/scholasticbowl.html
@@ -5,6 +5,10 @@
 	<title>Scholastic Bowl</title>
 </head>
 <body>
-  
+  <ul>
+	<li><a href="index.html">Resume</a></li>
+	<li><a href="waterpolorules.html">Water Polo</a></li>
+	<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+  </ul>
 </body>
 </html>
