--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<ul>
+		<li><a href="ricardocabreraa.github.io">Main Site</a></li>
 		<li><a href="index.html">Resume</a></li>
 		<li><a href="waterpolorules.html">Water Polo</a></li>
 		<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
