--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<ul>
-		<li><a href="ricardocabreraa.github.io">Site Directory</a></li>
+		<li><a href="https://ricardocabreraa.github.io/">Site Directory</a></li>
 		<li><a href="index.html">Resume</a></li>
 		<li><a href="waterpolorules.html">Water Polo</a></li>
 		<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
