--- a/scholasticbowl.html
+++ b/scholasticbowl.html
@@ -10,5 +10,24 @@
 	<li><a href="waterpolorules.html">Water Polo</a></li>
 	<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
   </ul>
+<h1>Scholastic Bowl Rules</h1>
+<p>The way a game is typically played is that you have a set of 20 toss up question which are worth 10 points each. If you can correctly answer the question your team can then
+answer 3 bonus questions all relating to a topic and all also worth 10 points. If you answer any question with in the first sentence being read you get a power which means 15 points
+instead of the normal 10. You can talk with your team during bonus questions but not during toss ups. If someone from your team gets a problem inncorrect the whole team can no longer
+answer and the opposing team gets either the rest of the question read out or 3 seconds which ever is longer to answer.</p>
+<h1>Subject Categories</h1>
+<ul>
+	<li>Geography</li>
+	<li>Math</li>
+	<li>Visual Art</li>
+	<li>Music</li>
+	<li>Religion</li>
+	<li>Mythology</li>
+	<li>Philosophy</li>
+	<li>Social Sciences</li>
+	<li>Current Events</li>
+	<li>Popular Culture</li>
+</ul>
+	
 </body>
 </html>
