--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<title>Ricardo Cabrera's Resume</title>
 </head>
 <body>
-	<ul>
-		<li><a href="index.html">Resume</a></li>
-		<li><a href="waterpolorules.html">Water Polo</a></li>
-		<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
-	</ul>
+	<nav>
+      		<a href="index.html">Resume</a>
+     		<a href="waterpolorules.html">Water Polo<</a>
+      		<a href="scholasticbowl.html">Scholastic Bowl</a>
+    	</nav>
 	<h1>Ricardo Cabrera's Resume</h1>
 	<p>rcabrera2@hawk.iit.edu</p>
 	
