--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" href="css/style.css">
-	<title>Ricardo Cabrera's Resume</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Ricardo Cabrera's Resume</title>
 </head>
 <body>
-	<nav>
-      		<a href="index.html">Resume</a>
-     		<a href="waterpolorules.html">Water Polo<</a>
-      		<a href="scholasticbowl.html">Scholastic Bowl</a>
-    	</nav>
-	<h1>Ricardo Cabrera's Resume</h1>
-	<p>rcabrera2@hawk.iit.edu</p>
-	
-	<h1>Education</h1>
-	<ul>
-		<li><p>Lindblom AC 2018-2019</p></li>
-		<li><p>Jones College Prep 2020-2024</p></li>
-	</ul>
+    <div class="box"> <!-- Add the box class here -->
+        <header>
+            <h1>Ricardo Cabrera's Resume</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Resume</a></li>
+                    <li><a href="waterpolorules.html">Water Polo</a></li>
+                    <li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+                </ul>
+            </nav>
+        </header>
 
-	<h1>Skills</h1>
-	<h2>Programming</h2>
-	<ul>
-		<li><p>Java: Distinguished</p></li>
-		<li><p>JavaScript: Distinguished</p></li>
-		<li><p>Html: Profient</p></li>
-		<li><p>Python: Developing</p></li>
-	</ul>
-	<h2>Athletics</h2>
-	<ul>
-		<li><p>Varsity Water Polo</p></li>
-		<li><p>Varsity Swimming</p></li>
-	</ul>
-	
-	<h1>Experience</h1>
-	<h2>After School Matters Teen Ambassador: Marshall Debate</h2>
-	<ul>
-		<li>Helped organize meetings</li>
-		<li>Collaborated with program participates to construct safe environment</li>
-		<li>Provided feedback to ASM leadership</li>
-	</ul>
+        <p>rcabrera2@hawk.iit.edu</p>
+        
+        <h1>Education</h1>
+        <ul>
+            <li><p>Lindblom AC 2018-2019</p></li>
+            <li><p>Jones College Prep 2020-2024</p></li>
+        </ul>
+
+        <h1>Skills</h1>
+        <h2>Programming</h2>
+        <ul>
+            <li><p>Java: Distinguished</p></li>
+            <li><p>JavaScript: Distinguished</p></li>
+            <li><p>Html: Proficient</p></li>
+            <li><p>Python: Developing</p></li>
+        </ul>
+        <h2>Athletics</h2>
+        <ul>
+            <li><p>Varsity Water Polo</p></li>
+            <li><p>Varsity Swimming</p></li>
+        </ul>
+        
+        <h1>Experience</h1>
+        <h2>After School Matters Teen Ambassador: Marshall Debate</h2>
+        <ul>
+            <li>Helped organize meetings</li>
+            <li>Collaborated with program participants to construct a safe environment</li>
+            <li>Provided feedback to ASM leadership</li>
+        </ul>
+    </div> <!-- Close the box div -->
 </body>
 </html>
