--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
         </ul>
     </nav>
+    <p>Ricardo Cabrera</p>
     <p>rcabrera2@hawk.iit.edu</p>
         
     <h1>Education</h1>
