--- a/scholasticbowl.html
+++ b/scholasticbowl.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Scholastic Bowl</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Ricardo Cabrera's Resume</title>
 </head>
 <body>
-  <ul>
-	<li><a href="index.html">Resume</a></li>
-	<li><a href="waterpolorules.html">Water Polo</a></li>
-	<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
-  </ul>
+    <header>
+     <h1>Ricardo Cabrera's Resume</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Resume</a></li>
+            <li><a href="waterpolorules.html">Water Polo</a></li>
+            <li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+        </ul>
+    </nav>
 <h1>Scholastic Bowl Rules</h1>
 <p>The way a game is typically played is that you have a set of 20 toss up question which are worth 10 points each. If you can correctly answer the question your team can then
 answer 3 bonus questions all relating to a topic and all also worth 10 points. If you answer any question with in the first sentence being read you get a power which means 15 points
