--- a/waterpolorules.html
+++ b/waterpolorules.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Water Polo Rules</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Ricardo Cabrera's Resume</title>
 </head>
 <body>
-  <ul>
-		<li><a href="index.html">Resume</a></li>
-		<li><a href="waterpolorules.html">Water Polo</a></li>
-		<li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
-	</ul>
+    <header>
+     <h1>Ricardo Cabrera's Resume</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Resume</a></li>
+            <li><a href="waterpolorules.html">Water Polo</a></li>
+            <li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+        </ul>
+    </nav>
   <h1>Water Polo Rules:</h1>
   <ul>
     <li><p>6 “Field” Players and 1 Goalie start the game.  Teams consist of up to 15 players.</p></li>
