--- a/waterpolorules.html
+++ b/waterpolorules.html
@@ -17,7 +17,7 @@
             <li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
         </ul>
     </nav>
-    	 <img src="images/polo.jpg">
+    	 <img src="images/polo.jpg" alt="Polo Image">
   <h1>Water Polo Rules:</h1>
   <ul>
     <li><p>6 “Field” Players and 1 Goalie start the game.  Teams consist of up to 15 players.</p></li>
