--- a/scholasticbowl.html
+++ b/scholasticbowl.html
@@ -35,6 +35,6 @@ answer and the opposing team gets either the rest of the question read out or 3 
 	<li>Current Events</li>
 	<li>Popular Culture</li>
 </ul>
-	<img src="images/quizbowl.jpg">
+	<img src="images/quizbowl.jpg" alt="Quiz Bowl Image">
 </body>
 </html>
