--- a/waterpolorules.html
+++ b/waterpolorules.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">Resume</a></li>
             <li><a href="waterpolorules.html">Water Polo</a></li>
             <li><a href="scholasticbowl.html">Scholastic Bowl</a></li>
+            <li><a href="maps.html">Google Maps</a></li>
         </ul>
     </nav>
     <img src="images/polo.jpg" alt="Polo Image">
