--- a/maps.html
+++ b/maps.html
@@ -21,7 +21,7 @@
   <div id="map"></div>
   <script src="https://maps.googleapis.com/maps/api/js?AIzaSyBQ3SmYCvO-wYZw1IQE_Ol2Kvx28T6Ty78&callback=initMap" async defer></script>
   <section>
-    <h1>This my commute from my school to the approximate location of my house.</h1>
+    <h1>This my commute from my school to the location of my house.</h1>
   </section>
 </body>
 
